--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/chivo": "^5.0.5",
     "@fontsource/rajdhani": "^5.0.4",
     "astro": "^2.7.2",
+    "sass": "^1.64.1",
     "tailwindcss": "^3.0.24"
   }
 }
