--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "aink-news.github.io",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^4.0.0",
-    "@fontsource-variable/chivo": "^5.0.5",
-    "@fontsource/rajdhani": "^5.0.4",
-    "astro": "^2.7.2",
-    "tailwindcss": "^3.0.24"
-  }
+    "name": "aink-news.github.io",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@astrojs/tailwind": "^4.0.0",
+        "@astrojs/vercel": "^3.8.0",
+        "@fontsource-variable/chivo": "^5.0.8",
+        "@fontsource/rajdhani": "^5.0.7",
+        "astro": "^2.10.1",
+        "tailwindcss": "^3.3.3"
+    },
+    "devDependencies": {
+        "prettier": "^3.0.1",
+        "prettier-plugin-astro": "^0.11.0"
+    }
 }
