--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
-    "@fontsource-variable/chivo": "^5.0.5",
-    "@fontsource/rajdhani": "^5.0.4",
-    "astro": "^2.7.2",
-    "sass": "^1.64.1",
-    "tailwindcss": "^3.0.24"
+    "@astrojs/vercel": "^3.8.0",
+    "@fontsource-variable/chivo": "^5.0.8",
+    "@fontsource/rajdhani": "^5.0.7",
+    "astro": "^2.10.1",
+    "sass": "^1.64.2",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.1",
+    "prettier-plugin-astro": "^0.11.0"
   }
 }
